[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/Buffalo 3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Buffalo 2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Buffalo 1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Buffalo.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.5
height = 9.19839

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.50781
height = 11.9228

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
} ]

[node name="Buffalo" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 7.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 7.5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Running"
frame = 1
speed_scale = 2.0
playing = true
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 20, 6 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 4

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -20, 6 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 4

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 4

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 4

[node name="RightView" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 2

[node name="LeftView" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 2147483650

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
